completion of three tasks

--- a/ReadLater5/ReadLater5/Views/Bookmarks/Index.cshtml
+++ b/ReadLater5/ReadLater5/Views/Bookmarks/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Entity.Category>
+﻿@model IEnumerable<Entity.Bookmark>
 
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Bookmarks</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -12,7 +12,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Url)
+            @Html.DisplayNameFor(model => model.ShortDescription)
+            @Html.DisplayNameFor(model => model.CategoryId)
+            @Html.DisplayNameFor(model => model.CreateDate)
         </th>
         <th></th>
     </tr>
@@ -21,7 +24,10 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(model => item.ShortDescription)
+                @* @Html.DisplayFor(model => item.URL)
+                @Html.DisplayFor(model => item.CategoryId)
+                @Html.DisplayFor(model => item.CreateDate) *@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
